@@ -1,5 +1,5 @@
 ------------------------------------------------------------------------
-r1189 | gaser | 2017-09-26 11:01:33
+r1190 | gaser | 2017-09-26 11:19:00
 
 Changed paths:
 M       CHANGES.txt
@@ -7,6 +7,16 @@ M       cat_surf_results.m
 
 Fixed: Function to hide neg. values in cat_surf_results.m was using wrong
 parameters.
+------------------------------------------------------------------------
+r1189 | gaser | 2017-09-26 11:01:53 +0200 (Di, 26 Sep 2017) | 7 lines
+
+Changed paths:
+M       CHANGES.txt
+M       cat_surf_results.m
+
+Fixed: Function to hide neg. values in cat_surf_results.m was using wrong
+parameters.
+
 ------------------------------------------------------------------------
 r1188 | gaser | 2017-09-24 16:41:12 +0200 (So, 24 Sep 2017) | 8 lines
 
